##*****************************************************************************
## $Id: Makefile.am,v 1.1 2007-10-03 20:20:14 chu11 Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

EXTRA_DIST = \
	Makefile.am \
	0001-Run-libtoolize-copy.patch \
	0002-Build-libltdl.patch \
	0003-Build-libcfengine-with-libltdl.patch \
	0004-Rerun-autotools.patch \
	0005-Add-support-for-dynamic-modules-for-hard-classes.patch \
	0006-Move-cf.preconf-call-to-before-classes-are-configured.patch

