##*****************************************************************************
## $Id: Makefile.am,v 1.12 2006-06-19 21:25:41 chu11 Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

SUBDIRS = Libgenders Genders
