##*****************************************************************************
## $Id: Makefile.am,v 1.3 2006-03-28 02:27:22 chu11 Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

SUBDIRS              = testdatabases

clean:
	rm -f test*.out
	rm -f test*.time

EXTRA_DIST = perf_tests.sh

