##*****************************************************************************
## $Id: Makefile.am,v 1.6 2009-04-06 18:13:15 chu11 Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

EXTRA_DIST = \
	genders.base \
	genders.base_comma \
	genders.base_comments_beginning_of_line \
	genders.base_comments_beginning_of_line_comma \
	genders.base_comments_beginning_of_line_hostrange \
	genders.base_comments_end_of_line \
	genders.base_comments_end_of_line_comma \
	genders.base_comments_end_of_line_hostrange \
	genders.base_comments_end_of_line_with_whitespace \
	genders.base_comments_end_of_line_with_whitespace_comma \
	genders.base_comments_end_of_line_with_whitespace_hostrange \
	genders.base_comments_middle_of_line \
	genders.base_comments_middle_of_line_comma \
	genders.base_comments_middle_of_line_hostrange \
	genders.base_hostrange \
	genders.base_hostrange_single \
	genders.base_whitespace_after_attrs \
	genders.base_whitespace_after_attrs_comma \
	genders.base_whitespace_after_attrs_hostrange \
	genders.base_whitespace_after_nodes \
	genders.base_whitespace_after_nodes_comma \
	genders.base_whitespace_after_nodes_hostrange \
	genders.base_whitespace_before_and_after_nodes \
	genders.base_whitespace_before_and_after_nodes_comma \
	genders.base_whitespace_before_and_after_nodes_hostrange \
	genders.base_whitespace_before_nodes \
	genders.base_whitespace_before_nodes_comma \
	genders.base_whitespace_before_nodes_hostrange \
	genders.base_whitespace_between_nodes \
	genders.base_whitespace_between_nodes_and_attrs \
	genders.corner_case \
	genders.empty_file \
	genders.equal_sign_in_value \
	genders.large_attr \
	genders.large_val \
	genders.nodes_and_attrs_only \
	genders.nodes_and_attrs_only_comma \
	genders.nodes_and_attrs_only_hostrange \
	genders.nodes_only_many \
	genders.nodes_only_one \
	genders.parse_error_all \
	genders.parse_error_comments_only \
	genders.parse_error_duplicate_attr_different_line_attr_and_val \
	genders.parse_error_duplicate_attr_different_line_attr_and_val_comma \
	genders.parse_error_duplicate_attr_different_line_attr_and_val_hostrange \
	genders.parse_error_duplicate_attr_different_line_attr_with_val \
	genders.parse_error_duplicate_attr_different_line_attr_with_val_comma \
	genders.parse_error_duplicate_attr_different_line_attr_with_val_hostrange \
	genders.parse_error_duplicate_attr_different_line_attr_without_val \
	genders.parse_error_duplicate_attr_different_line_attr_without_val_comma \
	genders.parse_error_duplicate_attr_different_line_attr_without_val_hostrange \
	genders.parse_error_duplicate_attr_same_line_attr_and_val \
	genders.parse_error_duplicate_attr_same_line_attr_and_val_comma \
	genders.parse_error_duplicate_attr_same_line_attr_and_val_hostrange \
	genders.parse_error_duplicate_attr_same_line_attr_with_val \
	genders.parse_error_duplicate_attr_same_line_attr_with_val_comma \
	genders.parse_error_duplicate_attr_same_line_attr_with_val_hostrange \
	genders.parse_error_duplicate_attr_same_line_attr_without_val \
	genders.parse_error_duplicate_attr_same_line_attr_without_val_comma \
	genders.parse_error_duplicate_attr_same_line_attr_without_val_hostrange \
	genders.parse_error_empty_file \
	genders.parse_error_equal_sign_in_value_1 \
	genders.parse_error_equal_sign_in_value_2 \
	genders.parse_error_errant_commas \
	genders.parse_error_hostname_not_shortened \
	genders.parse_error_hostname_not_shortened_comma \
	genders.parse_error_hostname_not_shortened_hostrange \
	genders.parse_error_hostname_too_long \
	genders.parse_error_hostname_too_long_comma \
	genders.parse_error_hostname_too_long_hostrange \
	genders.parse_error_no_attr_before_equal_sign \
	genders.parse_error_no_value_after_equal_sign \
	genders.parse_error_whitespace_in_attr \
	genders.parse_error_whitespace_in_attr_comma \
	genders.parse_error_whitespace_in_attr_hostrange \
	genders.parse_error_whitespace_in_list \
	genders.parse_error_whitespace_in_list_comma \
	genders.parse_error_whitespace_in_list_hostrange \
	genders.parse_error_whitespace_in_val \
	genders.parse_error_whitespace_in_val_comma \
	genders.parse_error_whitespace_in_val_hostrange \
	genders.query_1 \
	genders.query_1_comma \
	genders.query_1_hostrange \
	genders.query_2 \
	genders.query_2_comma \
	genders.query_2_hostrange \
	genders.query_special_chars \
	genders.subst_escape_char \
	genders.subst_nodename \
	genders.subst_nodename_comma \
	genders.subst_nodename_hostrange \
	genders.test_1 \
	genders.test_1_comma \
	genders.test_1_hostrange \
	genders.test_2 \
	genders.test_2_comma \
	genders.test_2_hostrange \
	genders.test_3 \
	genders.whitespace_after_nodes_nodes_only \
	genders.whitespace_before_and_after_nodes_nodes_only \
	genders.whitespace_before_nodes_nodes_only \
	genders.bugzilla414_1 \
	genders.bugzilla414_2 \
	genders.bugzilla414_3 \
	genders.bugzilla414_4 \
	genders.bugzilla414_5
