##*****************************************************************************
## $Id: Makefile.am,v 1.6 2009-04-06 18:13:15 chu11 Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

EXTRA_DIST = \
	genders.16knodes_300attrs
